[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Fonts/m6x11.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/UserInterface/SceneChangeButton.gd" type="Script" id=2]
[ext_resource path="res://scenes/UserInterface/Transition.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=5]
resource_name = "Fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0352941, 0, 0.0666667, 0 ), Color( 0.0352941, 0, 0.0666667, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "START"
tracks/0/type = "value"
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0352941, 0, 0.0666667, 0 ), Color( 0.0352941, 0, 0.0666667, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="ChangeScene" type="Button"]
margin_right = 95.0
margin_bottom = 17.0
focus_neighbour_top = NodePath("../Exit")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.513726, 0.513726, 0.513726, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.901961, 0.894118, 0.34902, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.768627, 0.0980392, 1 )
custom_constants/hseparation = 0
shortcut_in_tooltip = false
text = "Start"
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" parent="." instance=ExtResource( 3 )]

[node name="ColorRect" parent="Transition" index="0"]
color = Color( 0.0352941, 0, 0.0666667, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade_out = SubResource( 5 )
anims/START = SubResource( 6 )

[connection signal="button_up" from="." to="." method="_on_ChangeScene_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_ChangeScene_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_ChangeScene_mouse_entered"]

[editable path="Transition"]
